html,css and js almost completed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>slider</title>
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
+    <title>puzzle</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="header">Chamber</h1>
+    <div id="board"></div>
+    <h1>Turns: <span id="turns">0</span></h1>
+  </body>
 </html>
